2004-04-20  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menuitem.c (menuitem_get_size):
	* fvwm/menuitem.h:
	renamed remaining "mips" to mipst

2004-04-09  Olivier Chapuis  <olivier.chapuis@free.fr>

	* fvwm/events.c (HandleMapRequestKeepRaised):
	* fvwm/ewmh_events.c (ewmh_DesktopGeometry):
	Fixed EWMH DesktopGeometry and Stacking list

2004-04-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/virtual.c (GetDeskNumber):
	(CMD_MoveToDesk):
	(CMD_GotoDesk):
	fixed MoveToDesk with one argument

2004-04-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/style.c (style_parse_one_style_option):
	* fvwm/style.h:
	* fvwm/conditional.c (MatchesConditionMask):
	* fvwm/fvwm.h:
	* fvwm/window_flags.h:
	new style "State"

2004-03-31  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm.1.in:
	corrected a typo

2004-03-31  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (unmaximize_fvwm_window):
	fixed redrawing of maximize button when unmaximizing but when the size
	and position does not change

2004-03-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/expand.c (expand_vars_extended):
	new extended variable $[w.layer]

	* fvwm/move_resize.c (MaximizeHeight):
	(MaximizeWidth):
	(CMD_Maximize):
	applied modified layer patch for maximize by Rafal Bisingier

2004-03-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (setup_frame_attributes):
	Hopefully fixed BackingStore code and removed now useless backing store
	for decorations

	* fvwm/expand.c (expand_vars_extended):
	new extended variable $[w.desk]

2004-03-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* NEWS:
	* configure.in:
	increased version to 2.5.11
	released 2.5.10

	* NEWS:
	* configure.in:
	updated for 2.5.10 release

	* libs/Graphics.c (do_relieve_rectangle_with_rotation):
	improved rotation code

	* libs/gravity.c (gravity_add_rotations):
	new function

2004-03-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/placement.c (__explain_placement):
	new function
