@@ -1,3 +1,8 @@
+2004-04-21  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FAQ:
+	Corrected Q3.3
+
 2004-04-14  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FAQ:
