@@ -1,3 +1,8 @@
+2004-04-21  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/menus.c (NewMenuRoot):
+	do not strip whitespace from menu names when creating a new menu
+
 2004-04-20  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/menuitem.c (menuitem_get_size):
